complete reday and control sections

--- a/index.html
+++ b/index.html
@@ -42,7 +42,71 @@
                 <button class="button-brown">CALCULATE THE COST</button>
                 <button class="button-brown">SUBMIT YOUR APPLICATION</button>
             </div>
-
+        </div>
+    </section>
+    <section class="completed">
+        <div class="completed-content container">
+            <aside class="completed-content-ls">
+                <h2 class="completed-content-ls-title">Completed projects</h2>
+                <p class="completed-content-ls-disc">Only a small part of the work performed by our company is presented <br />on the site.  For 14 years on in the construction <br />
+                    market we have made happy more than 1000 families</p>
+                <div class="completed-content-ls-grid">
+                    <div class="completed-content-ls-grid-item"><h3>City:</h3><p>Rostov-on-Don
+                     <br />admiral</p></div>
+                    <div class="completed-content-ls-grid-item"><h3>apartment area:</h3><p>81 m2</p></div>
+                    <div class="completed-content-ls-grid-item"><h3>Repair time:</h3><p>3.5 months</p></div>
+                    <div class="completed-content-ls-grid-item"><h3>Repair Cost:</h3><p>Upon request</p></div>
+                </div>
+                <div class="completed-content-ls-arrows">
+                    <div class="left"></div>
+                    <div class="dots">
+                        <div class="dots-item"></div>
+                        <div class="dots-item"></div>
+                        <div class="dots-item"></div>
+                    </div>
+                    <div class="right"></div>
+                </div>
+            </aside>
+            <aside class="completed-content-rs">
+                <nav class="completed-content-rs-navigation">
+                    <ul class="completed-content-rs-navigation-list">
+                        <li><a href="#">Rostov-on-Don, Admiral</a></li>
+                        <li><a href="#">Sochi Thieves</a></li>
+                        <li><a href="#">Rostov-on-Don Patriotic</a></li>
+                    </ul>
+                </nav>
+                <div class="completed-content-rs-image">
+                    <div class="mobile-arrow"></div>
+                    <div class="mobile-arrow"></div>
+                </div>
+            </aside>
+        </div>
+    </section>
+    <section class="control">
+        <div class="control-content container">
+            <h2 class="control-content-title">online control</h2>
+            <div class="control-content-logo"></div>
+            <div class="control-content-video"></div>
+            <div class="control-content-line"></div>
+            <p class="control-content-disc">At each facility, a camera is installed that broadcasts the progress of work on the clock. At any time, you can go to our website and monitor the progress of work in your apartment. You can watch the live broadcast from one of our facilities!
+                Leave a request below and you will receive a link to the broadcast.</p>
+            <form action="" class="control-content-form">
+                <div>
+                    <div class="control-content-form-input">
+                        <span>Name</span>
+                        <input type="text" placeholder="What is your name:">
+                    </div>
+                    <div class="control-content-form-input">
+                        <span>Phone</span>
+                        <input type="text" placeholder="Your phone number:">
+                    </div>
+                    <button type="submit" class="control-content-button button-brown">SUBMIT</button>
+                </div>
+                <div>
+                    <input type="checkbox" id="agree" name="agree">
+                    <label for="agree">I agree to the processing of personal data</label>
+                </div>
+            </form>
         </div>
     </section>
 </body>
