complete types section

--- a/index.html
+++ b/index.html
@@ -109,5 +109,65 @@
             </form>
         </div>
     </section>
+
+    <section class="types">
+        <div class="types-content container">
+            <h2 class="types-content-title">TYPES OF REPAIR</h2>
+            <div class="types-content-logo"></div>
+            <div class="types-content-cards-wrapper">
+                <div class="types-content-cards-wrapper-card">
+                    <div class="types-content-cards-wrapper-card-content">
+                        <ul>
+                            <h3>Redecorating</h3>
+                            <li>Dismantling of old coatings</li>
+                            <li>Wallpapering </li>
+                            <li>Painting walls and ceilings</li>
+                            <li>Laying flooring</li>
+                            <li>Replacing plumbing</li>
+                            <li>Replacing sockets and switches</li>
+                            <li>Replacing doors</li>
+                        </ul>
+                        <div class="price">
+                            <span>from 900 rub / m2</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="types-content-cards-wrapper-card">
+                    <div class="types-content-cards-wrapper-card-content">
+                        <ul>
+                            <h3>Redecorating</h3>
+                            <li>Dismantling of old coatings</li>
+                            <li>Wallpapering </li>
+                            <li>Painting walls and ceilings</li>
+                            <li>Laying flooring</li>
+                            <li>Replacing plumbing</li>
+                            <li>Replacing sockets and switches</li>
+                            <li>Replacing doors</li>
+                        </ul>
+                        <div class="price">
+                            <span>from 1800 rub / m2</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="types-content-cards-wrapper-card">
+                    <div class="types-content-cards-wrapper-card-content">
+                        <ul>
+                            <h3>Redecorating</h3>
+                            <li>Dismantling of old coatings</li>
+                            <li>Wallpapering </li>
+                            <li>Painting walls and ceilings</li>
+                            <li>Laying flooring</li>
+                            <li>Replacing plumbing</li>
+                            <li>Replacing sockets and switches</li>
+                            <li>Replacing doors</li>
+                        </ul>
+                        <div class="price">
+                            <span>from 4000 rub / m2</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
