--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <title>Repair Project</title>
 </head>
 <body>
-
     <header class="header">
         <div class="header-content container">
             <div class="header-title">
@@ -167,6 +166,55 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="request">
+        <div class="request-content container">
+            <aside class="request-content-ls">
+                <div class="request-content-ls-content">
+                    <div class="request-content-ls-content-item">
+                        <div class="request-content-ls-content-item-circle"><div>01</div></div>
+                        <p>Our specialist will arrive for measurements per day
+                            contact, or appoint a date convenient for you</p>
+                    </div>
+                    <div class="request-content-ls-content-item">
+                        <div class="request-content-ls-content-item-circle"><div>02</div></div>
+                        <p>Free metering</p>
+                    </div>
+                    <div class="request-content-ls-content-item">
+                        <div class="request-content-ls-content-item-circle"><div>03</div></div>
+                        <p>Free consultation</p>
+                    </div>
+                    <div class="request-content-ls-content-item">
+                        <div class="request-content-ls-content-item-circle"><div>04</div></div>
+                        <p>Get a cost estimate and
+                            the timing of your future repairs</p>
+                    </div>
+                </div>
+            </aside>
+            <aside class="request-content-rs">
+                <div class="request-content-rs-content">
+                    <p class="request-content-rs-content-title">Leave a request for free <br />
+                        departure of the measurer</p>
+                    <div class="request-content-rs-content-input">
+                        <p>Name</p>
+                        <input type="text" placeholder="What is your name">
+                    </div>
+                    <div class="request-content-rs-content-input">
+                        <p>Phone</p>
+                        <input type="text" placeholder="Your phone number">
+                    </div>
+                    <div class="request-content-rs-content-input">
+                        <p>Email</p>
+                        <input type="text" placeholder="Your e-mail">
+                    </div>
+                    <div class="request-content-rs-content-check">
+                        <input type="checkbox" id="agree" name="agree">
+                        <label for="agree">I agree to the processing of personal data</label>
+                    </div>
+                    <button class="request-content-rs-content-button button-brown" type="submit">Call the measurer</button>
+                </div>
+            </aside>
         </div>
     </section>
 </body>
