fantasy section complete

--- a/index.html
+++ b/index.html
@@ -216,6 +216,51 @@
                 </div>
             </aside>
         </div>
+        <div class="pig">
+            <div class="pig-logo"></div>
+            <p class="pig-disc">Help save 10 - 20% of the <br />
+                cost of materials</p>
+        </div>
+    </section>
+    <section class="fantasy-mobile">
+        <div class="fantasy-mobile-content container">
+            <h3 class="fantasy-mobile-title">We realize your <br />
+                wildest fantasies</h3>
+            <div class="fantasy-mobile-picture"></div>
+        </div>
+    </section>
+    <section class="fantasy">
+        <div class="fantasy-content container">
+            <aside class="fantasy-content-ls">
+                <div class="fantasy-content-ls-content">
+                    <h3 class="fantasy-content-ls-content-title">We realize your <br />
+                        wildest fantasies</h3>
+                    <ul class="fantasy-content-ls-content-list">
+                        <li>American classic</li>
+                        <li>Empire</li>
+                        <li>Classical</li>
+                        <li>Loft</li>
+                        <li>Minimalism</li>
+                        <li>Provence</li>
+                        <li>Romanticism</li>
+                        <li>Scandinavian style</li>
+                        <li>Mediterranean style</li>
+                        <li>High tech</li>
+                        <li>Eclecticism</li>
+                    </ul>
+                </div>
+            </aside>
+            <div class="fantasy-content-pictures">
+                <div class="fantasy-content-pictures-ls">
+                    <img src="./assets/fantasy/item_1.png" alt="item_1.png">
+                    <img src="./assets/fantasy/item_2.png" alt="item_2.png">
+                </div>
+                <div class="fantasy-content-pictures-rs">
+                    <img src="./assets/fantasy/item_3.png" alt="item_3.png">
+                    <img src="./assets/fantasy/item_4.png" alt="item_4.png">
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
