--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Repair Project</title>
 </head>
+
 <body>
     <header class="header">
         <div class="header-content container">
@@ -32,7 +34,7 @@
     </header>
     <section class="turnkey">
         <div class="turnkey-content container">
-            <h2 class="turnkey-content-title">Turnkey Repair in the <br /> 
+            <h2 class="turnkey-content-title">Turnkey Repair in the <br />
                 city of <span>Rostov-on-Don</span></h2>
             <p class="turnkey-content-disc">Get ready-made turnkey repairs on time <br />
                 with work time saving up to 45 days and 20% from <br />
@@ -47,14 +49,29 @@
         <div class="completed-content container">
             <aside class="completed-content-ls">
                 <h2 class="completed-content-ls-title">Completed projects</h2>
-                <p class="completed-content-ls-disc">Only a small part of the work performed by our company is presented <br />on the site.  For 14 years on in the construction <br />
-                    market we have made happy more than 1000 families</p>
+                <p class="completed-content-ls-disc">Only a small part of the work performed by our company is presented
+                    <br />on the site. For 14 years on in the construction <br />
+                    market we have made happy more than 1000 families
+                </p>
                 <div class="completed-content-ls-grid">
-                    <div class="completed-content-ls-grid-item"><h3>City:</h3><p>Rostov-on-Don
-                     <br />admiral</p></div>
-                    <div class="completed-content-ls-grid-item"><h3>apartment area:</h3><p>81 m2</p></div>
-                    <div class="completed-content-ls-grid-item"><h3>Repair time:</h3><p>3.5 months</p></div>
-                    <div class="completed-content-ls-grid-item"><h3>Repair Cost:</h3><p>Upon request</p></div>
+                    <div class="completed-content-ls-grid-item">
+                        <h3>City:</h3>
+                        <p>Rostov-on-Don
+                            <br />admiral
+                        </p>
+                    </div>
+                    <div class="completed-content-ls-grid-item">
+                        <h3>apartment area:</h3>
+                        <p>81 m2</p>
+                    </div>
+                    <div class="completed-content-ls-grid-item">
+                        <h3>Repair time:</h3>
+                        <p>3.5 months</p>
+                    </div>
+                    <div class="completed-content-ls-grid-item">
+                        <h3>Repair Cost:</h3>
+                        <p>Upon request</p>
+                    </div>
                 </div>
                 <div class="completed-content-ls-arrows">
                     <div class="left"></div>
@@ -87,7 +104,9 @@
             <div class="control-content-logo"></div>
             <div class="control-content-video"></div>
             <div class="control-content-line"></div>
-            <p class="control-content-disc">At each facility, a camera is installed that broadcasts the progress of work on the clock. At any time, you can go to our website and monitor the progress of work in your apartment. You can watch the live broadcast from one of our facilities!
+            <p class="control-content-disc">At each facility, a camera is installed that broadcasts the progress of work
+                on the clock. At any time, you can go to our website and monitor the progress of work in your apartment.
+                You can watch the live broadcast from one of our facilities!
                 Leave a request below and you will receive a link to the broadcast.</p>
             <form action="" class="control-content-form">
                 <div>
@@ -173,20 +192,28 @@
             <aside class="request-content-ls">
                 <div class="request-content-ls-content">
                     <div class="request-content-ls-content-item">
-                        <div class="request-content-ls-content-item-circle"><div>01</div></div>
+                        <div class="request-content-ls-content-item-circle">
+                            <div>01</div>
+                        </div>
                         <p>Our specialist will arrive for measurements per day
                             contact, or appoint a date convenient for you</p>
                     </div>
                     <div class="request-content-ls-content-item">
-                        <div class="request-content-ls-content-item-circle"><div>02</div></div>
+                        <div class="request-content-ls-content-item-circle">
+                            <div>02</div>
+                        </div>
                         <p>Free metering</p>
                     </div>
                     <div class="request-content-ls-content-item">
-                        <div class="request-content-ls-content-item-circle"><div>03</div></div>
+                        <div class="request-content-ls-content-item-circle">
+                            <div>03</div>
+                        </div>
                         <p>Free consultation</p>
                     </div>
                     <div class="request-content-ls-content-item">
-                        <div class="request-content-ls-content-item-circle"><div>04</div></div>
+                        <div class="request-content-ls-content-item-circle">
+                            <div>04</div>
+                        </div>
                         <p>Get a cost estimate and
                             the timing of your future repairs</p>
                     </div>
@@ -212,7 +239,8 @@
                         <input type="checkbox" id="agree" name="agree">
                         <label for="agree">I agree to the processing of personal data</label>
                     </div>
-                    <button class="request-content-rs-content-button button-brown" type="submit">Call the measurer</button>
+                    <button class="request-content-rs-content-button button-brown" type="submit">Call the
+                        measurer</button>
                 </div>
             </aside>
         </div>
@@ -262,5 +290,98 @@
             </div>
         </div>
     </section>
+    <section class="clients">
+        <div class="clients-content container">
+            <h3 class="clients-content-title">our clients</h3>
+            <div class="clients-content-logo"></div>
+            <p class="clients-content-disc">80% of our customers recommend us to their<br />
+                friends and family.</p>
+            <div class="clients-content-feedbacks">
+                <div class="clients-content-feedbacks-item">
+                    <div class="clients-content-feedbacks-item-header">
+                        <div class="clients-content-feedbacks-item-header-avatar c1"></div>
+                        <p class="clients-content-feedbacks-item-header-name">Fedosova Maria <br />
+                            Konstantinovna</p>
+                    </div>
+                    <p class="clients-content-feedbacks-item-disc">
+                        I want to thank the guys for their work. We put your shower part in repair. I am very grateful
+                        that I referred to the repair as to my own. Great thanks I express the project
+                        to Georgia for its professionalism and approach.
+                        <br />
+                        <br />
+                        The repair process was turned out in terms, faster than anticipated. Team mobile and
+                        professional. Works performed qualitatively without comments. Quality satisfied. Prices
+                        democratic. I recommend these masters.
+                    </p>
+                    <div class="clients-content-feedbacks-item-button">
+                        <div class="clients-content-feedbacks-item-button-square">
+                            <div></div>
+                            <p>40 m2</p>
+                        </div>
+                        <div class="line"></div>
+                        <div class="clients-content-feedbacks-item-button-time">
+                            <div></div>
+                            <p>48 DAYS</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="clients-content-feedbacks-item">
+                    <div class="clients-content-feedbacks-item-header">
+                        <div class="clients-content-feedbacks-item-header-avatar c2"></div>
+                        <p class="clients-content-feedbacks-item-header-name">Afanasyev Sergey <br /> Alexandrovich</p>
+                    </div>
+                    <p class="clients-content-feedbacks-item-disc">
+                        I want to thank the guys for their work. We put your shower part in repair. I am very grateful
+                        that I referred to the repair as to my own. Great thanks I express the project
+                        to Georgia for its professionalism and approach.
+                        <br />
+                        <br />
+                        The repair process was turned out in terms, faster than anticipated. Team mobile and
+                        professional. Works performed qualitatively without comments. Quality satisfied. Prices
+                        democratic. I recommend these masters.
+                    </p>
+                    <div class="clients-content-feedbacks-item-button">
+                        <div class="clients-content-feedbacks-item-button-square">
+                            <div></div>
+                            <p>90 м2</p>
+                        </div>
+                        <div class="line"></div>
+                        <div class="clients-content-feedbacks-item-button-time">
+                            <div></div>
+                            <p>128 DAYS</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="clients-content-feedbacks-item">
+                    <div class="clients-content-feedbacks-item-header">
+                        <div class="clients-content-feedbacks-item-header-avatar c3"></div>
+                        <p class="clients-content-feedbacks-item-header-name">Kiriev Egor <br /> Leonidovich</p>
+                    </div>
+                    <p class="clients-content-feedbacks-item-disc">
+                        I want to thank the guys for their work. We put your shower part in repair. I am very grateful
+                        that I referred to the repair as to my own. Great thanks I express the project
+                        to Georgia for its professionalism and approach.
+                        <br />
+                        <br />
+                        The repair process was turned out in terms, faster than anticipated. Team mobile and
+                        professional. Works performed qualitatively without comments. Quality satisfied. Prices
+                        democratic. I recommend these masters.
+                    </p>
+                    <div class="clients-content-feedbacks-item-button">
+                        <div class="clients-content-feedbacks-item-button-square">
+                            <div></div>
+                            <p>56 м2</p>
+                        </div>
+                        <div class="line"></div>
+                        <div class="clients-content-feedbacks-item-button-time">
+                            <div></div>
+                            <p>86 DAYS</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
